<resources>
    <string name="app_name">Calender Quickstart</string>
    <string name="calender_event_display">Display Calender Events</string>
    <string name="data_retrieval">Retrieving data...</string>
    <string name="status_text">status</string>
    <string name="result_text">result</string>
    <string name="add_default_event">Add default event</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="action_settings">Settings</string>
    <string name="pick_start_time">START TIME</string>
    <string name="pick_start_time_opt">START TIME (Optional)</string>
    <string name="pick_end_time">END TIME</string>
    <string name="pick_date">SELECT DATE</string>
    <string name="edit_title">TITLE</string>
    <string name="edit_location">LOCATION</string>
    <string name="edit_description">DESCRIPTION</string>
    <string name="event_submit">SUBMIT</string>
    <string name="reminder">REMINDER</string>
    <string name="reminder_email">EMAIL</string>
    <string name="reminder_alarm">ALARM</string>
    <string name="select_priority">PRIORITY</string>
    <string name="today">Today</string>
    <string name="user_settings"></string>
    <string name="actionbar_add_event">ADD AN EVENT</string>
    <string name="label_login">LOGIN</string>

    <string-array name="priorities_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
