<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.calenderquickstart.AddDetailedEventFragment">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_title"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location"
        android:layout_margin="10dp"/>/>


    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_description"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_event_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:text="@string/pick_start_time"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/text_event_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:text="@string/pick_end_time"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/select_priority"/>

        <Spinner
            android:id="@+id/spinner_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/highlighted_text_material_light"
            android:drawSelectorOnTop="true"
            android:layout_marginLeft="15dp"
            android:entries="@array/priorities_array">
        </Spinner>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/checkbox_email_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/reminder_email"/>

        <CheckBox
            android:id="@+id/checkbox_alarm_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/reminder_alarm"/>

    </LinearLayout>


    <Button
        android:id="@+id/submit_detailed_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/event_submit"/>

</LinearLayout>


